<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9046" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9035"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Launched!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LdS-i9-FoN">
                                <rect key="frame" x="260" y="290" width="80.5" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cbb-ab-YIc">
                                <rect key="frame" x="20" y="375" width="59" height="30"/>
                                <color key="backgroundColor" red="0.31534723185329472" green="1" blue="0.29051778726671063" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <state key="normal" title="Button 3"/>
                                <connections>
                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="581-jb-Ndc"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="btI-Wd-TGJ">
                                <rect key="frame" x="84" y="375" width="59" height="30"/>
                                <color key="backgroundColor" red="0.41564404202767802" green="1" blue="0.99179327740770817" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <state key="normal" title="Button 4"/>
                                <connections>
                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EiO-HB-PBt"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rlO-U1-BAu">
                                <rect key="frame" x="84" y="337" width="59" height="30"/>
                                <color key="backgroundColor" red="1" green="0.31660648623227483" blue="0.25901941740948031" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <state key="normal" title="Button 2"/>
                                <connections>
                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="M5K-RA-lGY"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7d3-Fp-zEg">
                                <rect key="frame" x="20" y="337" width="59" height="30"/>
                                <color key="backgroundColor" red="1" green="0.94699755529999996" blue="0.30287192070000002" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <state key="normal" title="Button 1"/>
                                <connections>
                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iAZ-x6-LkL"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="LdS-i9-FoN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Wdz-61-aVK"/>
                            <constraint firstItem="LdS-i9-FoN" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="kk1-HJ-F9s"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="centerLabel" destination="LdS-i9-FoN" id="3je-c6-1Mq"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="348" y="230"/>
        </scene>
    </scenes>
</document>
