//
//  TestIOSAppUITests.m
//  TestIOSAppUITests
//
//  Created by Nitin Alabur on 9/17/15.
//  Copyright © 2015 Nitin Alabur. All rights reserved.
//

#import <XCTest/XCTest.h>

@interface TestIOSAppUITests : XCTestCase

@end

@implementation TestIOSAppUITests

- (void)setUp {
    [super setUp];
    
    // Put setup code here. This method is called before the invocation of each test method in the class.
    
    // In UI tests it is usually best to stop immediately when a failure occurs.
    self.continueAfterFailure = NO;
    // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
    [[[XCUIApplication alloc] init] launch];
    
    // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
}

- (void)tearDown {
    // Put teardown code here. This method is called after the invocation of each test method in the class.
    [super tearDown];
}

- (void)testExample {
    // Use recording to get started writing UI tests.
    // Use XCTAssert and related functions to verify your tests produce the correct results.
    
    XCUIApplication *app = [[XCUIApplication alloc] init];
    [app.buttons[@"Button 1"] tap];
    [app.buttons[@"Button 2"] tap];
    [app.buttons[@"Button 3"] tap];
    [app.buttons[@"Button 4"] tap];
    
    XCUIElement *button4TappedElement = [app.otherElements containingType:XCUIElementTypeStaticText identifier:@"Button 4 Tapped"].element;
    [button4TappedElement tap];
    [button4TappedElement tap];
    [app.staticTexts[@"Button 4 Tapped"] tap];
}
- (void)testFail {
    XCTAssertEqual(1, 0);
}
- (void)testPass {
    XCTAssertEqual(1, 1);
}

@end
